# asam_ods_exd_api_parquet

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  example_access_exd_api.ipynb  exd_api_server.py  external_data_file.py  external_data_reader.py  ods_external_data_pb2.py  ods_external_data_pb2.pyi  ods_external_data_pb2_grpc.py  ods_pb2.py  ods_pb2.pyi  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml  python-package.yml
data/: all_datatypes.parquet
proto_src/: README.md
test/: test_exd_api.py  test_exd_api_datatypes.py  test_exd_api_etc.py  test_parquet.py
tests/: mock_servicer_context.py  test_docker_integration.py  test_exd_api.py  test_exd_api_datatypes.py  test_exd_api_etc.py  test_parquet.py
