[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asam-ods-exd-api-parquet"
version = "0.9.2"
description = "ASAM ODS EXD API implementation to read external data from parquet files."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "totonga"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.4.1,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "pyarrow>=22.0.0",
    "ods-exd-api-box>=1.3.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "isort>=5.12",
    "jupyterlab>=4.0",
    "mypy>=1.5",
    "black>=26.1.0",
    "types-protobuf",
    "types-grpcio",
    "pyarrow.stubs",
    "flake8",
    "flake8-pyproject"
]

[project.urls]
Homepage = "https://github.com/totonga/asam_ods_exd_api_parquet"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.pylint.format]
max-line-length = 119

[tool.black]
line-length = 119
target-version = ["py312"]

[tool.flake8]
extend-ignore = ["E203"]
max-line-length = 119
exclude = [".venv", "__pycache__", "build", "*.egg-info"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ods_exd_api_box.proto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true
